# recommendation_practice

./: .env  .gitignore  DockerfileMlflow  DockerfilePipeline  LICENSE  README.md  alembic.ini  docker-compose.yaml  pipeline.py  pyproject.toml
alembic/: env.py
datareader/: ml_1m_data.py
src/: entrypoint.py  pipeline.py
src/core/: config.py
src/datareader/: db.py  ml_10m_data.py  ml_1m_data.py  ml_data_base.py
src/notebooks/: eda_ml_10m.ipynb
src/pipelines/: pipeline_popularity.py  pipeline_random.py  pipeline_svd.py
src/pipelines/BPR/: Dockerfile  model.py  pipeline_bpr.py  pipeline_params.env
src/pipelines/IMF/: Dockerfile  model.py  pipeline_imf.py  pipeline_params.env  pyproject.toml
src/pipelines/LDA_collaboration/: Dockerfile  model.py  pipeline_lda_collaboration.py  pipeline_params.env
src/pipelines/LDA_contents/: Dockerfile  model.py  pipeline_lda_contents.py  pipeline_params.env  pyproject.toml
src/pipelines/MF/: Dockerfile  model.py  pipeline_mf.py  pipeline_params.env  pyproject.toml
src/pipelines/NMF/: Dockerfile  model.py  pipeline_nmf.py  pipeline_params.env  pyproject.toml
src/pipelines/SVD/: Dockerfile  model.py  pipeline_params.env  pipeline_random.py  pipeline_svd.py  pyproject.toml
src/pipelines/UMCF/: Dockerfile  model.py  pipeline_UMCF.py  pipeline_params.env
src/pipelines/association/: Dockerfile  model.py  pipeline_association.py  pipeline_params.env  pyproject.toml
src/pipelines/pipeline_random/: preprocess.py
src/pipelines/pipeline_svd/: evaluate.py  preprocess.py  train.py
src/pipelines/popularity/: Dockerfile  model.py  pipeline_params.env  pipeline_popularity.py  pyproject.toml
src/pipelines/random/: Dockerfile  model.py  pipeline_params.env  pipeline_random.py  pyproject.toml
src/scripts/: run_pipeline_random.py  run_pipeline_svd.py
src/sql/: check_tags_per_movie.sql  integrated_tables.sql  integrated_tables_tags.sql  popularityrecommender_test.sql  popularityrecommender_train.sql  ratings.sql
src/table_models/: migrate_data.py  settings.py
src/table_models/ml_10m/: migrate_data.py  settings.py
src/table_models/ml_1m/: migrate_data.py  settings.py
src/utils/: evaluation_metrics.py  helper.py  models.py  pipeline_logging.py  pipeline_module.py
table_models/: migrate_data.py
tests/: test_pipeline_svd.py
utils/: pipeline_module.py
