[tool.poetry]
name = "recommendation-practice"
version = "0.1.0"
description = ""
authors = ["PH <phlin@example.com>"]
packages = [
    {include = "datareader", from = "src"},
    {include = "utils", from = "src"}, 
    {include = "table_models", from = "src"},
    {include = "core", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25"
scikit-surprise = "^1.1.4"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
mlflow = "^2.14.2"
pydantic = "^2.8.2"
joblib = "^1.4.2"
pgvector = "^0.3.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
pydantic-settings = "^2.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
